<resources>
    <string name="app_name">My app</string>
    <string name="product_barcode">Barcode : %1$s</string>
    <string name="quantity">Quantity : %1$s</string>
    <string name="sell_in">Sold in : %1$s</string>
    <string name="product_ingredients">Ingredients : %1$s</string>
    <string name="product_substances">Substances allergènes : %1$s</string>
    <string name="product_additive">Additives : %1$s</string>
    <string name="nutriscore_e_desc">Nutriscore : %1$s</string>
    <string name="product_title">%1$s</string>
    <string name="product_subTitle">%1$s</string>
    <string name="interogation">"?"</string>
    <string name="product_menu_title">Produit</string>
    <string name="nutrition_menu_title">Nutrition</string>
    <string name="nutritional_value_menu_title">Valeur</string>
</resources>