<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductItemActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_title"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        />
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_subTitle"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_empty_saved"
        app:layout_constraintRight_toRightOf="@id/imageView4"
        app:layout_constraintTop_toBottomOf="@id/imageView4"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"/>

    <TextView
        android:id="@+id/product_barcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_barcode"
        app:layout_constraintTop_toBottomOf="@id/imageView5"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"/>
    <TextView
        android:id="@+id/quantite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        app:layout_constraintTop_toBottomOf="@id/product_barcode"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        />
    <TextView
        android:id="@+id/sold_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sell_in"
        app:layout_constraintTop_toBottomOf="@id/quantite"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:paddingBottom="25dp"
        />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_ingredients"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toBottomOf="@+id/sold_in"
        android:paddingBottom="25dp"/>

    <TextView
        android:id="@+id/substances"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_substances"
        app:layout_constraintTop_toBottomOf="@id/ingredients"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        android:paddingBottom="25dp"/>

    <TextView
        android:id="@+id/additives"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/product_additive"
        app:layout_constraintTop_toBottomOf="@id/substances"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end" />

</androidx.constraintlayout.widget.ConstraintLayout>