<?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/food_card"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        tools:layout_editor_absoluteY="15dp"
        android:layout_marginBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/product_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
                app:layout_constraintStart_toStartOf="@id/cardguideline_start"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product_subTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
                app:layout_constraintStart_toStartOf="@id/cardguideline_start"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
                app:layout_constraintTop_toBottomOf="@id/imageView"
                app:srcCompat="@drawable/ic_nav_bar_bookmarks" />

            <ImageView
                android:id="@+id/rank_logo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@id/cardguideline_start"
                app:layout_constraintTop_toBottomOf="@id/subtitle"
                app:srcCompat="@drawable/ic_ranking"

                />

            <TextView
                android:id="@+id/nutrition_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nutriscore_e_desc"
                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@id/rank_logo"

                app:layout_constraintTop_toBottomOf="@id/subtitle" />

            <ImageView
                android:id="@+id/calory_logo"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintLeft_toRightOf="@id/nutrition_score"
                app:layout_constraintRight_toLeftOf="@id/cardguideline_end"
                app:layout_constraintTop_toBottomOf="@id/subtitle"
                app:srcCompat="@drawable/ic_calories"

                />

            <TextView
                android:id="@+id/calory_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nutriscore_e_desc"
                app:layout_constraintEnd_toEndOf="@id/cardguideline_end"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toEndOf="@id/calory_logo"
                app:layout_constraintTop_toBottomOf="@id/subtitle" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardguideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/cardguideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
